force-app/main/default/objects/et4ae5__AggregateLink__c/fields/et4ae5__Last_Clicked__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Last_Clicked__c</fullName>
    <inlineHelpText>La fecha y la hora cuando se hizo clic por última vez en este vínculo</inlineHelpText>
    <label>Last Clicked</label>
    <type>DateTime</type>
</CustomField>